# ezlogin

./: .gitignore  README.md  components.json  main.py  package.json  pnpm-lock.yaml  release.jks  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: package-cli-ubuntu.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: main.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: lib.rs  models.rs  ocr.rs  portal.rs  storage.rs
src-tauri/src/: lib.rs  main.rs
src/components/: auth-card.tsx  login-form.tsx  settings-panel.tsx
src/components/ui/: alert.tsx  field.tsx
src/lib/: use-window-controls.ts
