[package]
name = "ezlogin-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["time"] }
image = "0.25"
ndarray = "0.17"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "copy-dylibs", "api-24", "tls-rustls"] }
serde_urlencoded = "0.7"
dirs = "5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "native-tls-vendored"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "native-tls"] }
